<resources>
    <!-- Main-->
    <string name="app_name">CST2335</string>
    <string name="mainpage">Main page</string>
    <string name="car">Car charging station finder</string>
    <string name="recipe">Recipe engine</string>
    <string name="news">News headlines API</string>
    <string name="currency">Currency conversion API</string>
    <string name="about">About</string>
    <string name="invButton">hi</string>


    <!-- For Car charging station finder : Alex Hamilton-->
    <string name="ECCSFHelpStr">Help</string>
    <string name="ECCSFFindStr">Find</string>
    <string name="ECCSFLatitudeStr">Latitude:</string>
    <string name="ECCSFLongitudeStr">Longitude:</string>
    <string name="ECCSFLongitudeHintStr">Enter longitude&#8230;</string>
    <string name="ECCSFLatitudeHintStr">Enter latitude&#8230;</string>
    <string name="ECCSFlvTitleStr">Location Title:</string>
    <string name="ECCSFlvPhoneStr">Phone Number:</string>
    <string name="ECCSFlvDirectionsStr">Load Directions</string>
    <string name="ECCSFlvFavouritesStr">Add to Favourites</string>
    <string name="ECCSFDeleteStr">Delete From Favourites</string>
    <string name="ECCSFCurrencyConverterStr">Currency Converter</string>
    <string name="ECCSFFavouritesStr">Favourites</string>
    <string name="yesStr">Yes</string>
    <string name="noStr">No</string>
    <string name="ECCSFAlertCCStr">Do want to open the Currency Converter?</string>
    <string name="ECCSFAlertRSEStr">Do want to open the Recipe Search Engine?</string>
    <string name="ECCSFAlertNAPIStr">Do want to open the News API?</string>
    <string name="loadFavsStr">Loading favourites</string>
    <string name="delFavsStr">Deleted from Favourites</string>
    <string name="notFavsStr">Not in Favourites</string>
    <string name="addFavsStr">Added to Favourites</string>
    <string name="alreadyFavsStr">Already in Favourites</string>
    <string name="loadDirectionsStr">Loading directions&#8230;</string>
    <string name="searchingStr">Searching&#8230;</string>
    <string name="ECCSFAboutInfoStr">Electric Car Charger Station Finder (Version 1) by Alex Hamilton.
        \nInput your latitude and longitude to find the closest charger station.</string>

    <!-- For Recipe Engine : Lai Shan Law-->
    <string name="recipe_dialog_title">About Me</string>
    <string name="recipe_about">
        " Author: Lai Shan Law \n Version: 0.0.2 \n Find your favorite recipe! \n
        Instruction: Input a food name and click the SEARCH button"</string>
    <string name="favor">My Favorite</string>
    <string name="goSearch">Go Search</string>
    <string name="searchFood">Search Food</string>
    <string name="etFood">Food Name</string>
    <string name="searchBy">Search By:</string>
    <string name="foodTitle">Food Title</string>
    <string name="recipe_dialog_alert">Duplicate Item Found</string>
    <string name="recipe_alert_duplicate">
         This item is already in your favorite list</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_menu_favorite">Favorite</string>
    <string name="recipt_addFavorite">Add to Favorite</string>
    <string name="recipt_open_webpage">Open Web Page</string>
    <string name="recipt_remove_favorite"> Remove Favorite</string>



    <!-- For Recipe Engine FragmentFavor-->
    <string name="intent_message">intent_message</string>


    <!-- For Currency conversion API : Dmitrii Iakimchuk-->
    <string name="welcome">Welcome to the Currency Converter app</string>
<!--    <string name="mainpage">Main page</string>-->
<!--    <string name="car">Car charging station finder</string>-->
<!--    <string name="recipe">Recipe engine</string>-->
<!--    <string name="news">News headlines API</string>-->
<!--    <string name="currency">Currency conversion API</string>-->
<!--    <string name="about">About</string>-->
<!--    <string name="invButton">hi</string>-->
    <string name="dialogTitle">Conversion success</string>
    <string name="dialogMessage">Your conversion was successful</string>
    <string name="currency_about">Author: Dmitrii Iakimchuk, student #040911119\nCurrency converter app, part of the final project assignment for CST2335 Mobile Graphical Interface Programming\nVersion 1.21
        \nHow to use:\n1. Choose the initial currency and enter the amount\n2. Choose the target currency\n3. Pick a date you would like to use for conversion rates\n4. Press convert button to
        perform conversion\n
    \nAvailable currencies:\n CAD - Canadian dollar\n CNY - Chinese yuan\n GBP - British pound sterling\n EUR - EU euro\n JPY - Japanese yen\n BGN - Bulgarian lev\n CZK - Czech koruna\n DKK - Danish krone\n HUF - Hungarian forint\n
        PLN - Polish zloty\n RON - Romanian leu\n SEK - Swedish krona\n CHF - Swiss frank\n ISK - Icelandic crona\n NOK - Norvegian krone\n HRK - Croatian kuna\n RUB - Russian rouble\n TRY - Turkish lira\n AUD - Australian dollar\n
        BRL - Brazilian real\n HKD - Hong Kong dollar\n IDR - Indonesian rupiah\n ILS - Israeli shekel\n USD - US dollar\n INR - Indian rupee\n KRW - South Korean won\n MXN - Mexican peso\n MYR - Malaysian ringgit\n NZD - New Zealand dollar\n
        PHP - Philippine peso\n SGD - Singapore dollar\n THB - Thai baht\n ZAR - South African rand
    </string>

    <!-- News headlines API : David Lee-->
    <string name="news_app_name">FinalProject_DavidLee</string>
    <string name="webbuttontext">Web Link</string>
    <string name="savebuttontext">Save Article</string>
    <string name="welcometext">Welcome to News API</string>
    <string name="editText">Type in your article keyword</string>
    <string name="buttonsearchtext">Search!</string>
    <string name="copyright">The API key is provided by newsapi.org</string>
    <string name="editsavebuttontext">Save List</string>
    <string name="savedarticletext">Blank Article</string>
    <string name="deletesavedbutton">Delete</string>
    <string name="alerttext">You must type a keyword</string>
    <string name="alertbutton">Back to Main Menu</string>
    <string name="help">INSTRUCTION</string>
    <string name="author">Author: David Lee</string>
    <string name="version">Version 1.0</string>
    <string name="instructiontitle">INSTRUCTION</string>
    <string name="instructiondesc">Typing in the keyword and click the search button will show the list of articles. Click on an article will show the actions that a user can choose from. Clicking on a row on the saved article list will show the actions that a user can choose from.</string>
    <string name="exit">Exit</string>

</resources>
