<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author" />

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version" />

    <TextView
        android:id="@+id/instructiontitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructiontitle"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/instructiondesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructiondesc" />
</LinearLayout>