<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="357dp"
        app:srcCompat="@drawable/newsapi" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcometext" />

    <EditText
        android:id="@+id/searchedit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText" />

    <Button
        android:id="@+id/buttonsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonsearchtext" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright" />



</LinearLayout>